Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18780

Running "lfs quota -a -u /lustre" Simultaneously Causes the lfs quota to Hang

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      Running 'lfs quota -a -u/-g/-p /lustre' simultaneously causes the commands to hang.
      They said that the commands were run simultaneously by cron at 16:00.

      kernel: RIP: 0010:quotactl_getallquota+0x52/0x3e0 [lustre]
      
      kernel: Call Trace:
      kernel: <IRQ>
      kernel: ? quotactl_getallquota+0x52/0x3e0 [lustre]
      kernel: ? quotactl_getallquota+0x3f/0x3e0 [lustre]
      kernel: quotactl_ioctl+0x882/0xca0 [lustre]
      kernel: ? kmem_cache_alloc_trace+0x17e/0x300
      kernel: ll_dir_ioctl+0x200/0x5bb0 [lustre]
      kernel: ? ima_file_check+0x53/0x80
      kernel: ? avc_has_extended_perms+0x1b7/0x420
      kernel: ? terminate_walk+0x61/0xf0
      kernel: ? path_openat+0xc0/0x2b0 
      kernel: ? do_filp_open+0xb2/0x160
      kernel: __x64_sys_ioctl+0x87/0xc0
      kernel: do_syscall_64+0x59/0x90
      kernel: ? syscall_exit_to_user_mode+0x12/0x30
      kernel: ? do_syscall_64+0x69/0x90
      

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: